--- a/user/serverless.yml
+++ b/user/serverless.yml
@@ -4,13 +4,14 @@ provider:
   name: aws
   runtime: nodejs12.x
   stage: dev
-  region: us-east-1
+  region: localhost
 
 functions:
   - ${file(./user.lambda.yml)}
 
 plugins:
   - serverless-offline
+  - serverless-dynamodb-local
 
 custom:
   serverless-offline:
